// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly - input 1`] = `
<DocumentFragment>
  <div>
    <div
      class="css-fzcsno"
      data-chakra-component="CEditable"
    >
      <!---->
       
      <input
        class="css-fzcsno css-s4w4he"
        data-chakra-component="CEditableInput"
        data-testid="input"
        id="editable-1"
        placeholder="Click to edit..."
        value="testing"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div>
    <div
      class="css-fzcsno"
      data-chakra-component="CEditable"
    >
      <span
        class="css-fzcsno css-1rdo2d4"
        data-chakra-component="CEditablePreview"
        data-testid="preview"
        tabindex="0"
      >
        testing
      </span>
       
      <!---->
    </div>
  </div>
</DocumentFragment>
`;
